--- a/lesson1/dojo-blog/src/index.css
+++ b/lesson1/dojo-blog/src/index.css
@@ -10,6 +10,7 @@
   padding: 20px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   max-width: 600px;
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
@@ -33,4 +34,19 @@
   max-width: 600px;
   margin: 40px auto;
   padding: 20px;
+}
+
+.btn-red{
+  background-color: #f1356d;
+  color: #f2f2f2;
+  border-radius: .6rem;
+  transition: all .6s;
+  border: 1px solid #f1356d;
+}
+
+.btn-red:hover{
+
+  border: 1px solid #f1356d;
+  color: #f1356d;
+  background-color: #f2f2f2;
 }
